@@ -63,6 +63,11 @@
         <value>To be added.</value>
         <remarks>To be added.</remarks>
       </Docs>
+      <Attributes>
+        <Attribute>
+          <AttributeName>System.CLSCompliant(false)</AttributeName>
+        </Attribute>
+      </Attributes>
     </Member>
     <Member MemberName="_2">
       <MemberSignature Language="C#" Value="public T2 _2 { get; }" />
@@ -78,6 +83,11 @@
         <value>To be added.</value>
         <remarks>To be added.</remarks>
       </Docs>
+      <Attributes>
+        <Attribute>
+          <AttributeName>System.CLSCompliant(false)</AttributeName>
+        </Attribute>
+      </Attributes>
     </Member>
     <Member MemberName="_3">
       <MemberSignature Language="C#" Value="public T3 _3 { get; }" />
@@ -93,6 +103,11 @@
         <value>To be added.</value>
         <remarks>To be added.</remarks>
       </Docs>
+      <Attributes>
+        <Attribute>
+          <AttributeName>System.CLSCompliant(false)</AttributeName>
+        </Attribute>
+      </Attributes>
     </Member>
     <Member MemberName="Aggregate&lt;TResult&gt;">
       <MemberSignature Language="C#" Value="public TResult Aggregate&lt;TResult&gt; (Func&lt;T1,T2,T3,TResult&gt; func);" />
