@@ -67,6 +67,11 @@
         <value>To be added.</value>
         <remarks>To be added.</remarks>
       </Docs>
+      <Attributes>
+        <Attribute>
+          <AttributeName>System.CLSCompliant(false)</AttributeName>
+        </Attribute>
+      </Attributes>
     </Member>
     <Member MemberName="_2">
       <MemberSignature Language="C#" Value="public T2 _2 { get; }" />
@@ -82,6 +87,11 @@
         <value>To be added.</value>
         <remarks>To be added.</remarks>
       </Docs>
+      <Attributes>
+        <Attribute>
+          <AttributeName>System.CLSCompliant(false)</AttributeName>
+        </Attribute>
+      </Attributes>
     </Member>
     <Member MemberName="_3">
       <MemberSignature Language="C#" Value="public T3 _3 { get; }" />
@@ -97,6 +107,11 @@
         <value>To be added.</value>
         <remarks>To be added.</remarks>
       </Docs>
+      <Attributes>
+        <Attribute>
+          <AttributeName>System.CLSCompliant(false)</AttributeName>
+        </Attribute>
+      </Attributes>
     </Member>
     <Member MemberName="_4">
       <MemberSignature Language="C#" Value="public T4 _4 { get; }" />
@@ -112,6 +127,11 @@
         <value>To be added.</value>
         <remarks>To be added.</remarks>
       </Docs>
+      <Attributes>
+        <Attribute>
+          <AttributeName>System.CLSCompliant(false)</AttributeName>
+        </Attribute>
+      </Attributes>
     </Member>
     <Member MemberName="Aggregate&lt;TResult&gt;">
       <MemberSignature Language="C#" Value="public TResult Aggregate&lt;TResult&gt; (Func&lt;T1,T2,T3,T4,TResult&gt; func);" />
